observer-migration/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-traffic-to-sourc-zk
  namespace: martin
spec:
  podSelector:
    matchLabels:
      app: zk-destination
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: zk-destination
      ports:
        - port: 2888
        - port: 3888

    - from:
       - podSelector:
          matchLabels:
            app: kafka
      ports:
        - port: 2181
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: zk-destination
      ports:
        - port: 2888
        - port: 3888
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
